
	macosx/tkMaxOSXPort.h: Remove TkFreeWindowId and TkInitXId macro
		definitions.
	macosx/tkMacOSXXStubs.c: Remove the no-op 
		TkpWindowWasRecentlyDeleted.

	unix/tkUnixEvent.c: Remove call to TkFreeXId.
	unix/tkUnixXId.c: Remove a lot of unnecessary code (see above).  

	win/tkWinPort.h: Remove TkFreeWindowId and TkInitXId.
	win/tkWinWindow.c: Remove TkpWindowWasRecentlyDeleted.

2008-08-19  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkScroll.c:  Don't use sprintf "%g" to
	format floating point numbers in -[xy]scrollcommand callbacks
	or [xy]view methods.  Minor incompatibility: 0 and 1 now
	formatted as "0.0" resp "1.0".
	* tests/ttk/entry.test, tests/ttk/treeview.test: Updated
	to account for above change.

2008-08-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXFont.c (SetFontFeatures):	Disable antialiasing of
						 	fixed-width fonts with
						 	size <= 10.

2008-08-18  Ania Pawelczyk  <aniap@users.sourceforge.net>

    * tests/canvWind.test: Update to tcltest2
    * tests/menubut.test:
    * tests/raise.test:
    * tests/unixButton.test:
    * tests/unixEmbed.test:
    * tests/winClipboard.test:

2008-08-17  Ania Pawelczyk  <aniap@users.sourceforge.net>

    * tests/focus.test: Update to tcltest2
    * tests/focusTcl.test:
    * tests/geometry.test:
    * tests/grab.test:
    * tests/grid.test:
    * tests/imgBmap.test:
    * tests/imgPhoto.test:
    * tests/imgPPM.test:
    * tests/listbox.test:
    * tests/safe.test:
    * tests/tk.test:
    * tests/util.test:

2008-08-15  Ania Pawelczyk  <aniap@users.sourceforge.net>

    * tests/clrpick.test: Update to tcltest2
    * tests/frame.test:
    * tests/font.test:
    * tests/image.test:

2008-08-14  Ania Pawelczyk  <aniap@users.sourceforge.net>

    * test/event.test: Update to tcltest2
    * test/id.test:
    * test/menu.test:

2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SC_PATH_X):	check for libX11.dylib in addition to